2011-11-19  Kaz Kylheku  <kaz@kylheku.com>

	deffilter grows in power: it can take quasistrings.

	* lib.c (cdr_f): New global variable.
	(funcall1, funcall2, funcall3, funcall4): Fix unterminated
	arguments in uw_throwf call by using uw_throw instead.
	(do_or): New static function.
	(orf): New function.
	(obj_init): gc_protect and initialize cdr_f.

	* lib.h (cdr_f, orf): Declared.

	* match.c (v_deffilter): Treat the table as forms to be evaluated which
	must reduce to strings, rather than literal strings.

	* txr.1: Documented.

2011-11-19  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (yybadtoken): Use ~a to print bad character rather than #\
	notation.

2011-11-18  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y: Regression IDENT, '{' and '}'
	must be on the same precedence level and right
	associative. Without this consective braced
	variables don't work, etc.

2011-11-18  Kaz Kylheku  <kaz@kylheku.com>

	* gc.c (mark_mem_region): Use the Valgrind API only to mark
	the type field as accessible, not the whole object that
	we are checking. Marking the whole object accessible hides
	uninitialized field bugs!

	* lib.c: And found a bug already: lazy_str was not completely
	initializing all of the object fields (ls.prefix, ls.list)
	before invoking memory allocating operations, making it
	possible for the garbage collector to encounter uninitialized
	object areas.

2011-11-18  Kaz Kylheku  <kaz@kylheku.com>

	Added a JSON parsing test case. This flushed out a bug which crashed
	the garbage collector (uninitialized fields in function objects).

	* Makefile: Defined TXR_ARGS and TXR_OPTS for new test case.

	* hash.c (hash_begin): Construction of cobj modified to obey
	the correct procedure described in HACKING.

	* lib.c (func_n3, func_n4): These functions neglected to initialize
	the env member of the function structure.

	* tests/009/json.expected: New file.

	* tests/009/json.txr: New file.

	* tests/009/webapp.json: New file.
